--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,8 @@
     <title>Gemach</title>
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <link rel="stylesheet" text="text/css" href="/dist/styles.css">
-</head>
+    <link rel="stylesheet" href="https://use.typekit.net/qxx4zfj.css">
+    <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC|Varela+Round|Lato:100,300,400&display=swap" rel="stylesheet"></head>
 <body>
     <div id="app"></div>
     <script src="/dist/bundle.js"></script>
