--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <link rel="icon" type="image/png" href="/images/favicon.png">
     <link rel="stylesheet" text="text/css" href="/dist/styles.css">
     <link rel="stylesheet" href="https://use.typekit.net/qxx4zfj.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.css">
     <link href="https://fonts.googleapis.com/css?family=Noto+Sans+TC|Varela+Round|Lato:100,300,400&display=swap" rel="stylesheet"></head>
 <body>
     <div id="app"></div>
